tests222/tests2/test195.out
lli: <stdin>:1:1: error: expected top-level entity
line 2: variable j is not defined
^
